src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uenergy-ingress
  namespace: uenergyframework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /webui
            pathType: Prefix
            backend:
              service:
                name: webui-nginx-service
                port:
                  number: 80
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
          - path: /influxdb
            pathType: Prefix
            backend:
              service:
                name: database-service
                port:
                  number: 8086
